# rook

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
rook/: bitboard.py  chess_board.py  main.py
root/: constants.py  main.py
tests/: test_bitboard.py  test_chess_board.py
